--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -155,6 +155,22 @@ config CPU_FREQ_DEFAULT_GOV_MINMAX
 	help
 	Use the CPUFreq governor 'minmax' as default.
 
+config CPU_FREQ_DEFAULT_GOV_HYPER
+  bool "hyper"
+  select CPU_FREQ_GOV_HYPER
+  help
+    Use the CPUFreq governor 'hyper' as default.
+
+config CPU_FREQ_DEFAULT_GOV_ADAPTIVE
+  bool "adaptive"
+  select CPU_FREQ_GOV_ADAPTIVE
+  help
+    Use the CPUFreq governor 'adaptive' as default. This allows
+    you to get a full dynamic cpu frequency capable system by simply
+    loading your cpufreq low-level hardware driver, using the
+    'adaptive' governor for latency-sensitive workloads and demanding
+    performance.
+
 config CPU_FREQ_DEFAULT_GOV_BADASS
 	bool "badass"
 	select CPU_FREQ_GOV_BADASS
@@ -165,6 +181,12 @@ config CPU_FREQ_DEFAULT_GOV_DANCEDANCE
         bool "dancedance"
         select CPU_FREQ_GOV_DANCEDANCE  
 	help 
+
+config CPU_FREQ_DEFAULT_GOV_SMARTMAX
+	bool "smartmax"
+	select CPU_FREQ_GOV_SMARTMAX
+	help
+	  Use the CPUFreq governor 'smartmax' as default
 
 endchoice
 
@@ -303,6 +325,12 @@ config CPU_FREQ_GOV_CONSERVATIVE
 
 	  If in doubt, say N.
 
+config CPU_FREQ_GOV_SMARTMAX
+	tristate "'smartmax' cpufreq policy governor"
+	select CPU_FREQ_TABLE
+	help
+	  'smartmax' combined ondemand and smartass2
+
 config CPU_FREQ_GOV_INTELLIDEMAND
 	tristate "'intellidemand' cpufreq governor"
 	depends on CPU_FREQ
@@ -341,6 +369,81 @@ config CPU_FREQ_GOV_BADASS
 
 		If in doubt, say N.
 
+config CPU_FREQ_GOV_BADASS_2_PHASE
+  tristate "'2-phase' power-efficiency badass algorithm"
+  depends on CPU_FREQ_GOV_BADASS
+  help
+   '2-phase' - This driver adds a new algo to save power
+
+config CPU_FREQ_GOV_BADASS_2_PHASE_FREQ
+  int "'2-phase' badass frequency"
+  default 921000
+  depends on CPU_FREQ_GOV_BADASS
+  depends on CPU_FREQ_GOV_BADASS_2_PHASE
+
+config CPU_FREQ_GOV_BADASS_3_PHASE
+  tristate "'3-phase' power-efficiency badass algorithm"
+  depends on CPU_FREQ_GOV_BADASS
+  depends on CPU_FREQ_GOV_BADASS_2_PHASE
+  help
+  '3-phase' - This driver adds a new algo to save power
+
+config CPU_FREQ_GOV_BADASS_3_PHASE_FREQ
+  int "'3-phase' badass frequency"
+  default 1113000
+  depends on CPU_FREQ_GOV_BADASS
+  depends on CPU_FREQ_GOV_BADASS_2_PHASE
+  depends on CPU_FREQ_GOV_BADASS_3_PHASE
+
+config CPU_FREQ_GOV_BADASS_GPU_CONTROL
+  tristate "'gpu_control' power-efficiency badass algorithm"
+  depends on CPU_FREQ_GOV_BADASS
+  depends on CPU_FREQ_GOV_BADASS_2_PHASE
+  help
+  'gpu_control' - This driver adds a new algo to save power
+
+config CPU_FREQ_GOV_BADASS_LOWBAT_POWERSAVE
+  tristate "'lowbat_powersave' power-efficiency badass algorithm"
+  depends on CPU_FREQ_GOV_BADASS
+  help
+  'lowbat_powersave' - This driver adds a new algo to save power
+
+config CPU_FREQ_GOV_BADASS_ALLOW_BYPASS
+  tristate "Allows bypassing phases"
+  depends on CPU_FREQ_GOV_BADASS
+  depends on CPU_FREQ_GOV_BADASS_2_PHASE
+  help
+  'allow_bypass' - This driver adds a bypass to the phases
+
+config CPU_FREQ_GOV_HYPER
+  tristate "'hyper' cpufreq governor"
+  depends on CPU_FREQ
+  help
+    'hyper' - a tweaked "ondemand" based smart and smooth optimized governor!
+
+    If in doubt, say Y.
+
+config CPU_FREQ_GOV_ADAPTIVE
+  tristate "'adaptive' cpufreq policy governor"
+  help
+    'adaptive' - This driver adds a dynamic cpufreq policy governor
+    designed for latency-sensitive workloads and also for demanding
+    performance.
+
+    This governor attempts to reduce the latency of clock
+    increases so that the system is more responsive to
+    interactive workloads in loweset steady-state but to
+    to reduce power consumption in middle operation level level up
+    will be done in step by step to prohibit system from going to
+    max operation level.
+
+    To compile this driver as a module, choose M here: the
+    module will be called cpufreq_adaptive.
+
+    For details, take a look at linux/Documentation/cpu-freq.
+
+    If in doubt, say N.
+
 config CPU_FREQ_GOV_SMARTASSH3
   tristate "'SmartassH3' cpufreq governor"
   depends on CPU_FREQ
@@ -352,20 +455,6 @@ config CPU_FREQ_GOV_SMARTASSH3
 config CPU_FREQ_GOV_DANCEDANCE
   tristate "'dancedance' cpufreq governor"
   depends on CPU_FREQ
-
-config CPU_FREQ_GOV_VIRTUOUS
-        tristate "'virtuous' cpufreq governor"
-        depends on CPU_FREQ
-        help
-          'virtuous' - A conservatice based governor
-
-          If in doubt, say N.
-
-config CPU_FREQ_GOV_DARKSIDE
-	tristate "'darkside' cpufreq governor"
-	depends on CPU_FREQ
-	help
-	'darkside' - a "slightly more agressive smart" optimized governor!
 
 config CPU_FREQ_VDD_LEVELS
 	bool "CPU Vdd levels sysfs interface"
